--- a/roles/ohpc_ansys/templates/19.1
+++ b/roles/ohpc_ansys/templates/19.1
@@ -15,7 +15,7 @@ proc ModulesHelp { } {
 
 module-whatis   "Set environment variables to use $name version $ver"
 
-set base /export/apps/$name/$ver
+set base /export/apps/$name
 
 ## Add bin directories to the path
 prepend-path PATH $base/v191/Framework/bin/Linux64/
